# calendsync

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  bacon.toml  docker-compose.yml
.beads/: deletions.jsonl  issues.jsonl
.claude/context/: AXUM.md  DEXIE.md  HTMX.md  authentication.md  calendar-settings-persistence.md  cargo-rail.md  compound-pattern.md  dev-annotations.md  dev-server.md  dynamodb.md  entry-modal.md  entry-style-setting.md  feature-flags.md  hot-reload.md  lazy-ssr-init.md  multi-day-entries.md  now-indicator.md  offline-first.md  oidc-setup.md  react-calendar.md  react-contexts.md  react-ssr-example.md  responsive-layout.md  running-apps.md  schedule-grid.md  scroll-animation.md  scroll-pre-position.md  shared-types.md  sse-events.md  sse-hooks.md  ssr-worker-pool.md  storage-layer.md  systemfd.md  task-entries.md  tauri-desktop-setup.md  tauri-ios.md  tauri.md  typography.md  user-profile-settings.md  wheel-navigation.md  (+1 more)
.claude/designs/: 2024-12-30-offline-first-design.md  2025-01-20-dev-server-design.md  2025-06-19-backend-storage-design.md  2025-12-27-cargo-rail-integration-design.md  2025-12-27-vntana-cleanup-design.md  2025-12-28-multi-day-entries-design.md  2026-01-03-authentication-design.md
.claude/plans/: 2025-12-28-multi-day-entries.md  2026-02-26-fix-dev-annotations-compilation.md  2026-03-01-lint-verbose-guidance.md
.config/: rail.toml
.github/workflows/: ci.yml  dependabot.yml  release.yml
crates/auth/: Cargo.toml
crates/auth/src/: config.rs  error.rs  extractors.rs  handlers.rs  lib.rs  state.rs
crates/auth/src/mock_idp/: mod.rs  server.rs  templates.rs
crates/auth/src/providers/: apple.rs  google.rs  mock.rs  mod.rs
crates/auth/src/sessions/: inmemory.rs  mod.rs  redis_impl.rs  sqlite.rs
crates/calendsync/: CLAUDE.md  Cargo.toml  README.md  build.rs
crates/calendsync/examples/: README.md  react-ssr.rs
crates/calendsync/examples/hello-world/: package.json
crates/calendsync/examples/hello-world/src/: App.tsx
crates/calendsync/examples/hello-world/src/components/: Counter.tsx
crates/calendsync/examples/react-ssr/: CLAUDE.md  README.md  biome.json  package.json  tsconfig.json
crates/calendsync/examples/react-ssr/src/: App.tsx  client.tsx  index.tsx
crates/calendsync/examples/react-ssr/src/components/: Counter.tsx  Greeting.tsx  Weather.tsx
crates/calendsync/src/: app.rs  config.rs  error.rs  main.rs  mock_data.rs  state.rs
crates/calendsync/src/cache/: mod.rs
crates/calendsync/src/cache/memory/: cache.rs  mod.rs  pubsub.rs
crates/calendsync/src/cache/redis_impl/: cache.rs  error.rs  mod.rs  pubsub.rs
crates/calendsync/src/context/: extractor.rs  mod.rs  types.rs
crates/calendsync/src/dev/: mod.rs  schema.rs  store.rs
crates/calendsync/src/handlers/: api.rs  authz.rs  calendar.rs  calendar_react.rs  calendars.rs  dev.rs  entries.rs  error.rs  events.rs  flash.rs  health.rs  login.rs  mod.rs  pages.rs  root.rs  settings.rs  static_files.rs
crates/calendsync/src/handlers/dev/: annotations.rs  hot_reload.rs  mod.rs  sessions.rs  types.rs
crates/calendsync/src/models/: calendar.rs  entry.rs  mod.rs  user.rs
crates/calendsync/src/storage/: mod.rs
crates/calendsync/src/storage/cached/: calendar.rs  entry.rs  mod.rs
crates/calendsync/src/storage/dynamodb/: conversions.rs  error.rs  keys.rs  mod.rs  repository.rs
crates/calendsync/src/storage/inmemory/: mod.rs  repository.rs  session_store.rs
crates/calendsync/src/storage/sqlite/: conversions.rs  error.rs  mod.rs  repository.rs  schema.rs
crates/calendsync/templates/: base.html  calendar.html  index.html
crates/calendsync/templates/partials/: user_row.html  user_table.html
crates/client/: CLAUDE.md  Cargo.toml  README.md
crates/client/src/: error.rs  lib.rs  main.rs
crates/client/src/cli/: calendars.rs  entries.rs  events.rs  health.rs  mod.rs  users.rs
crates/client/src/client/: calendars.rs  entries.rs  events.rs  health.rs  mod.rs  users.rs
crates/client/src/output/: json.rs  mod.rs  pretty.rs
crates/core/: CLAUDE.md  Cargo.toml
crates/core/src/: lib.rs  serde.rs
crates/core/src/auth/: error.rs  functions.rs  mod.rs  traits.rs  types.rs  validation.rs
crates/core/src/cache/: error.rs  keys.rs  mod.rs  patterns.rs  serialization.rs  traits.rs
crates/core/src/calendar/: error.rs  merge.rs  mock_data.rs  mod.rs  operations.rs  requests.rs  sorting.rs  types.rs
crates/core/src/storage/: error.rs  http_mapping.rs  mod.rs  traits.rs  types.rs
crates/frontend/: CLAUDE.md  Cargo.toml  biome.json  build.rs  dev-server.ts  package.json  tsconfig.json
crates/frontend/scripts/: build-css.ts  update-manifest.ts
crates/frontend/src/: lib.rs
crates/frontend/src/calendar/: api.ts  entryModal.ts  events.ts  render.ts
crates/frontend/src/calendar-react/: App.tsx  client.tsx  styles.css  types.ts
crates/frontend/src/calendar-react/components/: Calendar.tsx  (+6 more)
crates/frontend/src/calendsync/: App.tsx  client.tsx  index.ts  server.tsx  styles.css  types.ts
crates/frontend/src/tauri/: App.tsx  api.ts  auth.ts  client.tsx  index.html  types.ts
crates/src-tauri/: .taurignore  CLAUDE.md  Cargo.toml  build.rs  tauri.conf.json
crates/src-tauri/capabilities/: default.json
crates/src-tauri/icons/: icon.icns
crates/src-tauri/src/: auth.rs  commands.rs  http.rs  lib.rs  main.rs  sse.rs
crates/ssr/: CLAUDE.md  Cargo.toml
crates/ssr/src/: error.rs  lib.rs  pool.rs  runtime.rs  worker.rs
crates/ssr_core/: CLAUDE.md  Cargo.toml
crates/ssr_core/src/: config.rs  error.rs  lib.rs  polyfills.rs
docs/: dev-annotations.md  dynamodb.md
xtask/: CLAUDE.md  Cargo.toml
xtask/src/: main.rs  prelude.rs  seed.rs
xtask/src/dev/: containers.rs  desktop.rs  error.rs  ios.rs  mod.rs  seed.rs  server.rs  web.rs
xtask/src/dynamodb/: client.rs  config.rs  deploy.rs  error.rs  mod.rs  planning.rs  seed.rs
xtask/src/install/: error.rs  mod.rs
xtask/src/integration/: error.rs  mod.rs
xtask/src/lint/: error.rs  hooks.rs  mod.rs
xtask/src/release/: error.rs  git.rs  github.rs  mod.rs  validation.rs  version.rs  workflow.rs
(+137 files in other folders)
