[package]
name = "xtask"
version = "0.1.0"
publish = false
license = "MIT"
edition = "2021"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
anstream = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml_edit = { workspace = true }
semver = { workspace = true }
dialoguer = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
calendsync_core = { workspace = true }
uuid = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
reqwest = { workspace = true }
