[package]
name = "calendsync"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/calendsync"
description = "Create calendars to sync with your friends"
autobins = false
build = "build.rs"

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "calendsync"
path = "src/main.rs"

[dependencies]
# Internal dependencies
calendsync_core = { workspace = true }
calendsync_frontend = { workspace = true }
calendsync_ssr = { workspace = true }

# External dependencies
anyhow = { workspace = true }
askama = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
listenfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
# For react-ssr example
deno_core = { workspace = true }
deno_error = { workspace = true }

[package.metadata.cargo-machete]
# calendsync_frontend is a build-time dependency that triggers the TypeScript build
# via Cargo's dependency resolution. It's not imported in Rust code but is required
# for the build process (see build.rs comment).
ignored = ["calendsync_frontend"]
