[package]
name = "calendsync"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/calendsync"
description = "Create calendars to sync with your friends"
autobins = false
build = "build.rs"

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "calendsync"
path = "src/main.rs"

[features]
default = ["inmemory", "memory"]

# Storage backends (mutually exclusive)
sqlite = ["dep:rusqlite", "dep:tokio-rusqlite"]
dynamodb = ["dep:aws-sdk-dynamodb", "dep:aws-config"]

# Cache backends (mutually exclusive)
memory = []
redis = ["dep:redis", "dep:futures-util"]

# In-memory storage backend (for testing)
inmemory = []

# Auth feature flags
auth-sqlite = ["dep:calendsync_auth", "calendsync_auth/sqlite", "dep:sqlx", "dep:urlencoding", "dep:axum-extra"]
auth-redis = ["dep:calendsync_auth", "calendsync_auth/redis", "dep:fred", "dep:urlencoding", "dep:axum-extra"]
auth-mock = ["dep:calendsync_auth", "calendsync_auth/mock", "dep:urlencoding", "dep:axum-extra"]

[dependencies]
# Internal dependencies
calendsync_core = { workspace = true }
calendsync_frontend = { workspace = true }
calendsync_ssr = { workspace = true }
calendsync_auth = { workspace = true, optional = true }

# External dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
listenfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
rand = { workspace = true }

# SQLite (optional)
rusqlite = { workspace = true, optional = true }
tokio-rusqlite = { workspace = true, optional = true }

# DynamoDB (optional)
aws-sdk-dynamodb = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }

# Redis (optional)
redis = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

# Auth session storage (optional)
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"], optional = true }
fred = { workspace = true, optional = true }

# URL encoding for auth redirects (optional)
urlencoding = { workspace = true, optional = true }

# Cookie extraction for session ID (auth features only)
axum-extra = { workspace = true, optional = true }

# LRU cache
lru = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
# For react-ssr example
deno_core = { workspace = true }
deno_error = { workspace = true }
