[package]
name = "calendsync_client"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/calendsync"
description = "CLI client for calendsync API"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "calendsync-client"
path = "src/main.rs"

[lib]
name = "calendsync_client"
path = "src/lib.rs"

[dependencies]
calendsync_core = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
async-stream = { workspace = true }
futures-core = "0.3"
