[package]
name = "calendsync_core"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/calendsync"
description = "Core for the calendsync project"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "calendsync_core"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
