[package]
name = "calendsync_core"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/calendsync"
description = "Core for the calendsync project"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "calendsync_core"
path = "src/lib.rs"

[features]
default = []
auth = ["rand", "url"]

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true, optional = true }
uuid = { workspace = true }
