[package]
name = "calendsync_tauri"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tauri desktop and mobile app for CalendSync"
build = "build.rs"

# For Tauri mobile builds - compile to library for iOS
[lib]
name = "calendsync_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "calendsync-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
