[package]
name = "calendsync_ssr"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "SSR worker pool - I/O and threading (imperative shell)"

[dependencies]
calendsync_ssr_core = { workspace = true }
deno_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
