[package]
name = "calendsync_ssr_core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure SSR logic - polyfills, config, validation (no I/O)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
